# amplifier-module-provider-openai-v2

./: README.md  pyproject.toml
amplifier_module_provider_openai_v2/: __init__.py  _constants.py
tests/: test_openai_provider.py
