[project]
name = "amplifier-module-provider-openai-v2"
version = "1.0.0"
description = "Reference provider module - OpenAI GPT integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "openai[aiohttp]>=2.15,<3.0",
]

[project.entry-points."amplifier.modules"]
provider-openai-v2 = "amplifier_module_provider_openai_v2:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_openai_v2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.0",
    "ruff>=0.14.10",
]

[tool.uv.sources]
amplifier-core = { path = "../amplifier-core", editable = true }

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py311"
